# magapp

./: .env.template  .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  LICENSE  Makefile  README.md  compose.yaml  docker-compose.production.yml  docker-compose.yml  fly.toml  justfile  magapp.db  manage.py  notes.md  package-lock.json  prod.Dockerfile.dockerignore  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  tailwind.config.js
.envs/.local/: .postgres
.github/workflows/: ci.yml  deploy.yml  push-image.yml  test_deploy.yml
compose/: Dockerfile  start
compose/local/django/: Dockerfile  start
compose/production/django/: Dockerfile  start
compose/production/traefik/: traefik.yml
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docker/dev/: Dockerfile  dev.Dockerfile  start  start.sh  start.xsh
docker/prod/: Dockerfile  prod.Dockerfile  start.sh  start.xsh
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
docs/pycharm/: configuration.rst
magapp/: asgi.py  conftest.py  settings.py  urls.py  utils.py  wsgi.py
magapp/base/: apps.py  managers.py  middleware.py  models.py  urls.py  views.py
magapp/base/migrations/: 0001_postgres_unaccent_extention.py
magapp/base/tests/: test_view.py
magapp/base/utils/: models.py
magapp/bkp/templates/: base.html
magapp/core/: apps.py  models.py  utils.py
magapp/ingredients/: admin.py  apps.py  filters.py  forms.py  models.py  urls.py  views.py
magapp/ingredients/migrations/: 0001_initial.py  0002_alter_ingredient_slug.py  0002_qualifier_ingredient_qualifiers.py  0002_remove_ingredient_recipe.py  0002_rename_created_by_ingredient_owner.py  0003_remove_ingredient_is_removed_ingredient_deleted_at.py  0004_ingredient_created_by.py
magapp/ingredients/models/: Ingredient.py  __init__.py
magapp/ingredients/tests/: conftest.py  test_models.py  (+4 more)
magapp/meals/: apps.py  forms.py  urls.py  views.py
magapp/menus/: apps.py  urls.py  views.py
magapp/notebooks/: Untitled.ipynb  recipe_form.ipynb
magapp/planners/: apps.py  urls.py  views.py
magapp/recipes/: admin.py  apps.py  facade.py  filters.py  forms.py  managers.py  urls.py  views.py
magapp/static/: input.css  output.css
magapp/templates/: 400.html  404.html  500.html  base.html  charts-apexcharts.html  charts-chartjs.html  charts-echarts.html  components-accordion.html  components-alerts.html  components-badges.html  components-breadcrumbs.html  components-buttons.html  components-cards.html  components-carousel.html  components-list-group.html  components-modal.html  components-pagination.html  components-progress.html  components-spinners.html  components-tabs.html  components-tooltips.html  footer.html  forms-editors.html  forms-elements.html  forms-layouts.html  forms-validation.html  header.html  icons-bootstrap.html  icons-boxicons.html  icons-remix.html  pages-blank.html  pages-contact.html  pages-error-404.html  pages-faq.html  pages-login.html  pages-register.html  sidebar.html  tables-data.html  tables-general.html  users-profile.html
magapp/users/: admin.py  apps.py  models.py  urls.py
magapp/utils/: __init__.py  logging.py
requirements/: base.txt  local.txt  production.txt
(+109 files in other folders)
