[tool.poetry]
name = "magapp"
version = "0.1.0"
description = ""
authors = ["pcampos <pcampos119104@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.2"
django-allauth = "^0.61.1"
django-environ = "^0.11.2"
django-extensions = "^3.2.3"

[tool.poetry.group.dev.dependencies]
django-pytest = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
