[tool.poetry]
name = "magapp"
version = "0.1.0"
description = ""
authors = ["pcampos <pcampos119104@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.2"
django-allauth = "^0.61.1"
django-environ = "^0.11.2"
django-extensions = "^3.2.3"
pytest-django = "^4.8.0"
gunicorn = "^21.2.0"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
sentry-sdk = {extras = ["django"], version = "^1.41.0"}
django-browser-reload = "^1.12.1"

[tool.poetry.group.dev.dependencies]
django-pytest = "^0.2.0"
marimo = "0.2.4"
werkzeug = "^3.0.1"
ruff = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Set the maximum line length to 120.
line-length = 120
show-fixes = true

[tool.ruff.lint]
select = [
    # isort
    "I",
    # pycodestyle
    "E",
]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "magapp.settings"
markers = [
    'models: test the models',
    'views: test all views'
]

# -- recommended but optional:
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]