[project]
name = "magapp"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = "~=3.13.5"
readme = "README.md"
dependencies = [
    "django>=5.1.6,<6",
    "django-environ>=0.12.0,<0.13",
    "django-allauth>=65.4.1,<66",
    "django-htmx>=1.22.0,<2",
    "django-extensions>=3.2.3,<4",
    "django-browser-reload>=1.18.0,<2",
    "psycopg[binary,pool]>=3.2.4,<4",
    "whitenoise[brotli]>=6.9.0,<7",
    "gunicorn>=23.0.0,<24",
    "sentry-sdk[django]>=2.32.0,<3",
    "xonsh>=0.19.9",
    "python-slugify>=8.0.4",
    "django-cotton>=2.1.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9",
    "pytest-django>=4.10.0,<5",
    "ruff>=0.9.6,<0.10",
    "marimo>=0.14.6,<0.15",
    "model-bakery>=1.20.5",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "magapp.settings"

# -- find the tests:
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]

[tool.ruff]
# 80 it's the default but nowadays the common sense it's 120.
line-length = 120
# Show an enumeration of all fixed lint violations
show-fixes = true

[tool.ruff.lint]
# https://docs.astral.sh/ruff/linter/#rule-selection
# which linter to run
select = [
    # isort
    "I",
    # pycodestyle
    "E",
]

[tool.ruff.format]
# https://docs.astral.sh/ruff/settings/#format_quote-style
# A lot discussion on the internet about it, I use single quotes.
quote-style = "single"
